--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <link href="~/css/main.css" rel="stylesheet" type="text/css">
     <link href="~/css/navbar.css" rel="stylesheet" type="text/css">
 
+    <script src="~/js/navbar.js"></script>
     <!-- Facebook Featchers -->
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
 
@@ -32,63 +33,109 @@
     </environment>
 </head>
 <body>
-    <nav id="navigation">
-        <a href="#" class="logo">Shik Shaq</a>
-        <ul class="links">
-            <li class="dropdown"><a href="/games" class="trigger-drop">Scores</a></li>
-            <li class="dropdown"><a href="/home/about" class="trigger-drop">About</a></li>
-            <li class="dropdown">
-                <a href="#" class="trigger-drop">Products<i class="arrow"></i></a>
-                <ul class="drop">
-                    <li><a href="#">All Products</a></li>
-                    <li><a href="#">Find Product</a></li>
-                </ul>
-            </li>
-
-            @{ string isAdmin = Context.Session.GetString("isUserAdmin"); }
-
-            @if (isAdmin != null && isAdmin.Equals("Y") && User.Identity.IsAuthenticated && User.HasClaim(ClaimTypes.Role, "Admin"))
-            {
+    <!--
+        <nav id="navigation">
+            <a href="#" class="logo">Shik Shaq</a>
+            <ul class="links">
+                <li class="dropdown"><a href="/games" class="trigger-drop">Scores</a></li>
+                <li class="dropdown"><a href="/home/about" class="trigger-drop">About</a></li>
                 <li class="dropdown">
-                    <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
+                    <a href="#" class="trigger-drop">Products<i class="arrow"></i></a>
                     <ul class="drop">
-                        <li><a href="/users">Manage Users</a></li>
-                        <li><a href="/products">Manage Products</a></li>
-                        <li><a href="/orders">Manage Orders</a></li>
-                        <li><a href="/branches">Manage Branches</a></li>
-                        <li><a href="/tags">Manage Tags</a></li>
-                        <li><a asp-controller="Statistics" asp-action="Index" method="get">Statistics</a></li>
+                        <li><a href="#">All Products</a></li>
+                        <li><a href="#">Find Product</a></li>
                     </ul>
                 </li>
-            }
 
-            @{ int? userId = Context.Session.GetInt32("userId"); }
+                { string isAdmin = Context.Session.GetString("isUserAdmin"); }
 
-            @if (userId > 0)
-            {
-                <li class="dropdown">
-                    <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
-                    <ul class="drop">
-                        <li><a href="/users/SimpleUserDetails/@userId">My Details</a></li>
-                        <li><a asp-controller="Account" asp-action="Cart" method="get">My Cart</a></li>
-                        <li><a asp-controller="Account" asp-action="Orders" method="get">My Orders</a></li>
-                        <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
-                    </ul>
-                </li>
-            }
-            else
-            {
-                <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
-            }
+               if (isAdmin != null && isAdmin.Equals("Y") && User.Identity.IsAuthenticated && User.HasClaim(ClaimTypes.Role, "Admin"))
+                {
+                    <li class="dropdown">
+                        <a href="#" class="trigger-drop">Administration<i class="arrow"></i></a>
+                        <ul class="drop">
+                            <li><a href="/users">Manage Users</a></li>
+                            <li><a href="/products">Manage Products</a></li>
+                            <li><a href="/orders">Manage Orders</a></li>
+                            <li><a href="/branches">Manage Branches</a></li>
+                            <li><a href="/tags">Manage Tags</a></li>
+                            <li><a asp-controller="Statistics" asp-action="Index" method="get">Statistics</a></li>
+                        </ul>
+                    </li>
+                }
+
+              { int? userId = Context.Session.GetInt32("userId"); }
+
+                if (userId > 0)
+                {
+                    <li class="dropdown">
+                        <a href="#" class="trigger-drop">Account<i class="arrow"></i></a>
+                        <ul class="drop">
+                            <li><a href="/users/SimpleUserDetails/userId">My Details</a></li>
+                            <li><a asp-controller="Account" asp-action="Cart" method="get">My Cart</a></li>
+                            <li><a asp-controller="Account" asp-action="Orders" method="get">My Orders</a></li>
+                            <li><a asp-controller="Account" asp-action="Logout" method="get">Logout</a></li>
+                        </ul>
+                    </li>
+                }
+                else 
+                {
+                    <li class="dropdown"><a asp-controller="Account" asp-action="Login" method="get" class="trigger-drop">Login</a></li>
+                }
 
 
 
-        </ul>
-    </nav>
+            </ul>
+        </nav>
+
+    -->
+
+    <div class="topnav" id="myTopnav">
+        <a asp-controller="Home" asp-action="Index" class="active">SHIK SHAQ</a>
+
+        @{ int? userId = Context.Session.GetInt32("userId"); }
+
+        @if (userId > 0)
+        {
+            <div class="dropdown">
+                <button class="dropbtn">
+                    Account
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="/users/SimpleUserDetails/@userId" method="get">My Details</a>
+                    <a asp-controller="Account" asp-action="Cart" method="get">My Cart</a>
+                    <a asp-controller="Account" asp-action="Orders" method="get">My Orders</a>
+                    <a asp-controller="Account" asp-action="Logout" method="get">Logout</a>
+                </div>
+            </div>
+        }
+        else
+        {
+            <a asp-controller="Account" asp-action="Login">Login</a>
+        }
+
+        <a href="w3_responsive_topnav.html">News</a>
+        <a href="#">Contact</a>
+        <div class="dropdown">
+            <button class="dropbtn">
+                Products
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="w3_sticky.html">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">&#9776;</a>
+            </div>
+        </div>
+        <a href="#">About</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content" style="max-width:100%">
+    <div class="container body-content" style="max-width:100%; padding-top:50px">
         @RenderBody()
         <hr />
         <footer>
