--- a/ShikShaq/wwwroot/css/navbar.css
+++ b/ShikShaq/wwwroot/css/navbar.css
@@ -1,150 +1,145 @@
-﻿* {
-    box-sizing: border-box;
+﻿body {
+    margin: 0;
+    font-family: Arial
 }
 
-body {
-    background: #33334d;
-    color: #222;
-    line-height: normal;
-    font-size: 16px;
-    font-family: sans-serif;
+.topnav {
+    overflow: hidden;
+    background-color: #333;
 }
 
-a, a:hover {
-    color: #33334d;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-nav {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    height: 50px;
-    background: #fff;
-    box-shadow: 0 0px 9px 4px rgba(0, 0, 0, 0.1), 0 -5px 2px 2px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    min-width: 580px;
-}
-
-    nav .logo {
-        position: relative;
+    .topnav a {
         float: left;
-        height: 50px;
-        line-height: 50px;
-        padding: 0 15px;
-        font-size: 22px;
-        font-weight: 900;
-        text-transform: uppercase;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
     }
 
-        nav .logo span {
-            display: inline-block;
-            position: relative;
-            top: -8px;
-            font-size: 13pt;
-        }
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
 
-        nav .logo:hover {
-            background: #9494b8;
-        }
+.topnav .icon {
+    display: none;
+}
 
-    nav .links {
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+    .dropdown .dropbtn {
+        font-size: 17px;
+        border: none;
+        outline: none;
+        color: white;
+        padding: 12px 16px; /*vertical align with .topnav a from 14px 16px*/
+        background-color: inherit;
+        font-family: inherit;
+        margin: 0;
+    }
+
+.dropdown-content {
+    display: none;
+    position: fixed; /* absolute;
+        ref. https://stackoverflow.com/questions/46535480/position-fixed-ruins-the-dropdown-menu-in-css-webpage */
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    .dropdown-content a {
+        float: none;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #555;
+    color: white;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/* stocky part begin */
+.header {
+    padding: 0 16px;
+}
+
+.content {
+    padding: 16px;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+    .sticky + .content {
+        padding-top: 60px;
+    }
+/* sticky part end  */
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
+        display: none;
+    }
+
+    .topnav a.icon {
         float: right;
-        margin-right: 30px;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
         position: relative;
     }
 
-        nav .links li {
-            float: left;
-            list-style: none;
-            position: relative;
-            margin: 10px;
-            display: inline-block;
+        .topnav.responsive .icon {
+            position: absolute;
+            right: 0;
+            top: 0;
         }
 
-            nav .links li > a {
-                position: relative;
-                display: inline-block;
-                padding: 0 10px;
-                line-height: 30px;
-                height: 30px;
+        .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+            border-bottom: .05px solid white; /* dropdown separation line */
+        }
+
+            .topnav.responsive a:nth-child(5) {
+                border-top: .05px solid white;
             }
+        /* dropdown separation line */
 
-                nav .links li > a:hover {
-                    color: #fff;
-                    background: #33334d;
-                    border-radius: 2px;
-                }
+        .topnav.responsive .dropdown {
+            float: none;
+        }
 
-                nav .links li > a[class^="trigger-"] {
-                    padding-right: 150px;
-                }
+        .topnav.responsive .dropdown-content {
+            position: relative;
+        }
 
-                nav .links li > a .arrow {
-                    position: absolute;
-                    width: 10px;
-                    height: 10px;
-                    top: 35%;
-                    text-align: center;
-                    right: 10px;
-                    border-width: 5px 5px 0 5px;
-                    border-style: solid;
-                    border-color: rgba(0, 0, 0, 0.3) transparent;
-                }
-
-                    nav .links li > a .arrow:after {
-                        content: "";
-                        border-left: 1px solid rgba(0, 0, 0, 0.15);
-                        top: -10px;
-                        left: -15px;
-                        position: absolute;
-                        height: 15px;
-                    }
-
-            nav .links li ul {
-                position: absolute;
-                left: 0;
-                margin: 0;
-                background: #fff;
-                border-radius: 2px;
-                box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-                display: none;
-            }
-
-                nav .links li ul > li {
-                    clear: both;
-                    list-style: none;
-                    display: block;
-                    padding: 0 10px;
-                    margin: 0;
-                    width: 100%;
-                }
-
-                    nav .links li ul > li:hover {
-                        background: #9494b8;
-                    }
-
-                        nav .links li ul > li:hover > a {
-                            background: #9494b8;
-                            color: #fff;
-                        }
-
-            nav .links li:hover > .drop {
-                display: block;
-                animation: fadeInRight .3s ease;
-                -webkit-animation: fadeInRight .3s ease;
-            }
-
-@keyframes fadeInRight {
-    0% {
-        opacity: 0;
-        transform: translate3d(100%, 0, 0);
-    }
-
-    100% {
-        opacity: 1;
-        transform: none;
-    }
+        .topnav.responsive .dropdown .dropbtn {
+            display: block;
+            width: 100%;
+            text-align: left;
+        }
 }
