--- a/ShikShaq/Views/Account/Cart.cshtml
+++ b/ShikShaq/Views/Account/Cart.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<WebApplication1.Models.CartItem>
+@using ShikShaq.Logic;
 
 @{
     ViewData["Title"] = "Cart";
@@ -20,10 +21,11 @@
 
     @foreach (var item in Model)
     {
+        var imgsrc = ProductImageSourceFetcher.Fetch(item.Product);
 
         <div class="product">
             <div class="product-image">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/71kjs9OiBdL._AC_SL1150_.jpg">
+                <img src="@imgsrc">
             </div>
             <div class="product-details">
                 <div class="product-title">@item.Product.Name</div>
