--- a/ShikShaq/Views/Branches/Edit.cshtml
+++ b/ShikShaq/Views/Branches/Edit.cshtml
@@ -3,7 +3,13 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+@section Scripts
+{
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/js/branches.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYy3vaPn7Dnb994s30XZHwqj2hdqXqTv4&callback=initMap"
+            async defer></script>
+}
 <h2>Edit</h2>
 
 <h4>Branch</h4>
@@ -28,16 +34,18 @@
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
+            <div id="map" style="width: 400px; height: 300px"></div>
             <div class="form-group">
                 <label asp-for="Lat" class="control-label"></label>
-                <input asp-for="Lat" class="form-control" />
+                <input id="branchLat" style="pointer-events: none;background-color:#E9ECEF" asp-for="Lat" class="form-control" />
                 <span asp-validation-for="Lat" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Lng" class="control-label"></label>
-                <input asp-for="Lng" class="form-control" />
+                <input id="branchLng" style="pointer-events: none;background-color:#E9ECEF" asp-for="Lng" class="form-control" />
                 <span asp-validation-for="Lng" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -48,7 +56,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
