--- a/ShikShaq/Views/ProductTags/Details.cshtml
+++ b/ShikShaq/Views/ProductTags/Details.cshtml
@@ -10,9 +10,26 @@
     <h4>ProductTag</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            Product Name
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Product.Name)
+        </dd>
+        <dt>
+            Tag Name
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Tag.Name)
+        </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Styles
+{
+    <link href="~/css/details.css" rel="stylesheet" type="text/css">
+}
