--- a/ShikShaq/Views/ProductTags/Edit.cshtml
+++ b/ShikShaq/Views/ProductTags/Edit.cshtml
@@ -14,6 +14,15 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="Product" class="control-label"></label>
+                <select name="ProductId" class="form-control" asp-items="@ViewBag.Products"></select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Tag" class="control-label"></label>
+                <select name="TagId" class="form-control" asp-items="@ViewBag.Tags"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
