--- a/ShikShaq/Views/ProductTags/Index.cshtml
+++ b/ShikShaq/Views/ProductTags/Index.cshtml
@@ -12,12 +12,23 @@
 <table class="table">
     <thead>
         <tr>
-            <th></th>
+            <th>
+                Product Name
+            </th>
+            <th>
+                Tag Name
+            </th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Product.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tag.Name)
+            </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
