--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -92,6 +92,7 @@
                     <a asp-controller="Orders" asp-action="Index" method="get">Manage Orders</a>
                     <a asp-controller="Branches" asp-action="Index" method="get">Manage Branches</a>
                     <a asp-controller="Tags" asp-action="Index" method="get">Manage Tags</a>
+                    <a asp-controller="ProductTags" asp-action="Index" method="get">Manage Product Tags</a>
                     <a asp-controller="Statistics" asp-action="Index" method="get">Statistics</a>
                 </div>
             </div>
