--- a/ShikShaq/Views/Account/Cart.cshtml
+++ b/ShikShaq/Views/Account/Cart.cshtml
@@ -23,7 +23,7 @@
     {
         var imgsrc = ProductImageSourceFetcher.Fetch(item.Product);
 
-        <div class="product">
+        <div class="product" id="@item.Product.Id">
             <div class="product-image">
                 <img src="@imgsrc">
             </div>
@@ -44,6 +44,8 @@
         </div>
 
     }
+
+    <div class="text-danger" id="status-message"></div>
 
     <div class="totals">
         <div class="totals-item">
