--- a/ShikShaq/Views/Statistics/Index.cshtml
+++ b/ShikShaq/Views/Statistics/Index.cshtml
@@ -1,86 +1,172 @@
-﻿<!DOCTYPE html>
-<meta charset="utf-8">
-
-<!-- Load d3.js -->
+﻿<meta charset="utf-8">
 <script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
+    <h2>Most Selling Products</h2>
+    <div id="productorders"></div>
+    <h2>Trending Tags</h2>
+    <div id="populartags"></div>
+    <script>
+        $.ajax({
+            method: 'get',
+            url: '/api/statisticsapi/productorders',
+            data: "{}",
+            success: function (data) {
+                // set the dimensions and margins of the graph
+                var width = 600
+                height = 600
+                margin = 100
 
-<!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
-<script>
+                // The radius of the pieplot is half the width or half the height (smallest one). I subtract a bit of margin.
+                var radius = Math.min(width, height) / 2 - margin
 
-    // set the dimensions and margins of the graph
-    var margin = { top: 10, right: 30, bottom: 30, left: 40 },
-        width = 460 - margin.left - margin.right,
-        height = 400 - margin.top - margin.bottom;
+                // append the svg object to the div called 'my_dataviz'
+                var svg = d3.select("#productorders")
+                    .append("svg")
+                    .attr("width", width)
+                    .attr("height", height)
+                    .append("g")
+                    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
-    // append the svg object to the body of the page
-    var svg = d3.select("#my_dataviz")
-        .append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-        .append("g")
-        .attr("transform",
-            "translate(" + margin.left + "," + margin.top + ")");
+                // set the color scale
+                var color = d3.scaleOrdinal()
+                    .domain(["a", "b", "c", "d", "e", "f", "g", "h"])
+                    .range(d3.schemeDark2);
 
-    // get the data
-    d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/1_OneNum.csv", function (data) {
+                // Compute the position of each group on the pie:
+                var pie = d3.pie()
+                    .sort(null) // Do not sort group by size
+                    .value(function (d) { return d.value; })
+                var data_ready = pie(d3.entries(data))
+                // Now I know that group A goes from 0 degrees to x degrees and so on.
 
-        // X axis: scale and draw:
-        var x = d3.scaleLinear()
-            .domain([0, d3.max(data, function (d) { return +d.price })])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.price })
-            .range([0, width]);
-        svg.append("g")
-            .attr("transform", "translate(0," + height + ")")
-            .call(d3.axisBottom(x));
+                // shape helper to build arcs:
+                var arc = d3.arc()
+                    .innerRadius(radius * 0.5)         // This is the size of the donut hole
+                    .outerRadius(radius * 0.8)
+                var outerArc = d3.arc()
+                    .innerRadius(radius * 0.9)
+                    .outerRadius(radius * 0.9)
+                // Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
+                svg
+                    .selectAll('allSlices')
+                    .data(data_ready)
+                    .enter()
+                    .append('path')
+                    .attr('d', arc)
+                    .attr('fill', function (d) { return (color(d.data.key)) })
+                    .attr("stroke", "white")
+                    .style("stroke-width", "2px")
+                    .style("opacity", 0.7)
 
-        // set the parameters for the histogram
-        var histogram = d3.histogram()
-            .value(function (d) { return d.price; })   // I need to give the vector of value
-            .domain(x.domain())  // then the domain of the graphic
-            .thresholds(x.ticks(70)); // then the numbers of bins
+                // Now add the annotation. Use the centroid method to get the best coordinates
+                svg
+                    .selectAll('allPolylines')
+                    .data(data_ready)
+                    .enter()
+                    .append('polyline')
+                    .attr("stroke", "black")
+                    .style("fill", "none")
+                    .attr("stroke-width", 1)
+                    .attr('points', function (d) {
+                        var posA = arc.centroid(d) // line insertion in the slice
+                        var posB = outerArc.centroid(d) // line break: we use the other arc generator that has been built only for that
+                        var posC = outerArc.centroid(d); // Label position = almost the same as posB
+                        var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2 // we need the angle to see if the X position will be at the extreme right or extreme left
+                        posC[0] = radius * 0.95 * (midangle < Math.PI ? 1 : -1); // multiply by 1 or -1 to put it on the right or on the left
+                        return [posA, posB, posC]
+                    })
+                // Add the polylines between chart and labels:
+                svg
+                    .selectAll('allLabels')
+                    .data(data_ready)
+                    .enter()
+                    .append('text')
+                    .text(function (d) { console.log(d.data.key); return d.data.key })
+                    .attr('transform', function (d) {
+                        var pos = outerArc.centroid(d);
+                        var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2
+                        pos[0] = radius * 0.99 * (midangle < Math.PI ? 1 : -1);
+                        return 'translate(' + pos + ')';
+                    })
+                    .style('text-anchor', function (d) {
+                        var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2
+                        return (midangle < Math.PI ? 'start' : 'end')
+                    })
+            },
+            error: function (result) {
 
-        // And apply this function to data to get the bins
-        var bins = histogram(data);
 
-        // Y axis: scale and draw:
-        var y = d3.scaleLinear()
-            .range([height, 0]);
-        y.domain([0, d3.max(bins, function (d) { return d.length; })]);   // d3.hist has to be called before the Y axis obviously
-        svg.append("g")
-            .call(d3.axisLeft(y));
 
-        // append the bar rectangles to the svg element
-        svg.selectAll("rect")
-            .data(bins)
-            .enter()
-            .append("rect")
-            .attr("x", 1)
-            .attr("transform", function (d) { return "translate(" + x(d.x0) + "," + y(d.length) + ")"; })
-            .attr("width", function (d) { return x(d.x1) - x(d.x0) - 1; })
-            .attr("height", function (d) { return height - y(d.length); })
-            .style("fill", "#69b3a2")
+            }
+        });
+        var _data;
+        var labels;
+        var dataset;
+        $.ajax({
+            method: 'get',
+            url: '/api/statisticsapi/populartags',
+            data: "{}",
+            success: function (data) {
+                _data = data
+                labels = Object.keys(data);
+                dataset = Object.values(data);
+                // set the dimensions and margins of the graph
+                var margin = { top: 30, right: 30, bottom: 70, left: 60 },
+                    width = 460 - margin.left - margin.right,
+                    height = 400 - margin.top - margin.bottom;
 
-    });
-    $.ajax({
-        method: 'get',
-        url: '/api/stats/productorders',
-        success: (data) => {
-            console.log(data)
-            var ctx = document.getElementById('my_dataviz').getContext('2d');
-            let labels = Object.keys(data);
-            let dataset = Object.values(data);
-            new Chart(ctx, {
-                type: 'pie',
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        backgroundColor: color,
-                        label: 'Products',
-                        data: dataset,
-                    }]
-                },
-                options
-            });
-        }
-    })
+                // append the svg object to the body of the page
+                var svg = d3.select("#populartags")
+                    .append("svg")
+                    .attr("width", width + margin.left + margin.right)
+                    .attr("height", height + margin.top + margin.bottom)
+                    .append("g")
+                    .attr("transform",
+                        "translate(" + margin.left + "," + margin.top + ")");
+
+                // Parse the Data
+
+
+                    // X axis
+                    var x = d3.scaleBand()
+                        .range([0, width])
+                        .domain(labels)
+                        .padding(0.2);
+                    svg.append("g")
+                        .attr("transform", "translate(0," + height + ")")
+                        .call(d3.axisBottom(x))
+                        .selectAll("text")
+                        .attr("transform", "translate(-10,0)rotate(-45)")
+                        .style("text-anchor", "end");
+
+                    // Add Y axis
+                    var y = d3.scaleLinear()
+                        .domain([0, 10])
+                        .range([height, 0]);
+                    svg.append("g")
+                        .call(d3.axisLeft(y));
+
+                    // Bars
+                    svg.selectAll("mybar")
+                        .data(labels)
+                        .enter()
+                        .append("rect")
+                        .attr("x", function (d) { return x(d);})
+                        .attr("y", function (d) { console.log(d); console.log('wasd'); return y(data[d]); })
+                        .attr("width", x.bandwidth()/2)
+                        .attr("height", function (d) { return (data[d]*30); })
+                        .attr("fill", "#69b3a2")
+
+                
+            },
+            error: function (result) {
+
+
+
+            }
+        });
+
+        
 </script>
